feat(HU4): Seguimiento estado de envio, webSockets y Redis
