# src/server.ts
@@ -2,12 +2,26 @@ import express from 'express';
 import cors from 'cors';
 import morgan from 'morgan';
 import swaggerUi from 'swagger-ui-express';
+import http from 'http';
 
 import { config } from './config';
 import { setupRoutes } from './frameworks/web/routes';
 import { mapErrorToHttpResponse } from './frameworks/web/utils/error-mapper';
+import socketService from './frameworks/web/socket/socket.service';
+import { connectRedis } from './frameworks/database/redis.connection';
 
 const app = express();
+const server = http.createServer(app);
+
+// Inicializar Redis (comentar estas líneas para deshabilitar Redis temporalmente)
+/*
+connectRedis()
+  .then(() => console.log('Redis inicializado correctamente'))
+  .catch(error => console.error('Error al inicializar Redis:', error));
+*/
+
+// Inicializar WebSockets
+socketService.initialize(server);
 
 // Middlewares
 app.use(cors());
@@ -32,7 +46,7 @@ app.use((err: Error, req: express.Request, res: express.Response, next: express.
 
 const PORT = config.port || 3000;
 
-app.listen(PORT, () => {
+server.listen(PORT, () => {
   console.log(`Servidor corriendo en el puerto ${PORT}`);
 });
 
